crates/squawk_parser/src/snapshots/parser__test__move_ok.snap
---
source: crates/parser/src/test.rs
input_file: crates/parser/test_data/ok/move.sql
---
SOURCE_FILE
  COMMENT "-- pg_docs"
  WHITESPACE "\n"
  MOVE_STMT
    MOVE_KW "move"
    WHITESPACE " "
    NEXT_KW "next"
    WHITESPACE " "
    FROM_KW "from"
    WHITESPACE " "
    NAME
      IDENT "cursor_name"
  SEMICOLON ";"
  WHITESPACE "\n"
  MOVE_STMT
    MOVE_KW "move"
    WHITESPACE " "
    PRIOR_KW "prior"
    WHITESPACE " "
    FROM_KW "from"
    WHITESPACE " "
    NAME
      IDENT "cursor_name"
  SEMICOLON ";"
  WHITESPACE "\n"
  MOVE_STMT
    MOVE_KW "move"
    WHITESPACE " "
    PRIOR_KW "prior"
    WHITESPACE " "
    IN_KW "in"
    WHITESPACE " "
    NAME
      IDENT "cursor_name"
  SEMICOLON ";"
  WHITESPACE "\n"
  MOVE_STMT
    MOVE_KW "move"
    WHITESPACE " "
    PRIOR_KW "prior"
    WHITESPACE " "
    NAME
      IDENT "cursor_name"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  MOVE_STMT
    MOVE_KW "move"
    WHITESPACE " "
    NEXT_KW "NEXT"
    WHITESPACE " "
    FROM_KW "FROM"
    WHITESPACE " "
    NAME
      IDENT "cursor_name"
  SEMICOLON ";"
  WHITESPACE "\n"
  MOVE_STMT
    MOVE_KW "move"
    WHITESPACE " "
    PRIOR_KW "PRIOR"
    WHITESPACE " "
    FROM_KW "FROM"
    WHITESPACE " "
    NAME
      IDENT "cursor_name"
  SEMICOLON ";"
  WHITESPACE "\n"
  MOVE_STMT
    MOVE_KW "move"
    WHITESPACE " "
    FIRST_KW "FIRST"
    WHITESPACE " "
    FROM_KW "FROM"
    WHITESPACE " "
    NAME
      IDENT "cursor_name"
  SEMICOLON ";"
  WHITESPACE "\n"
  MOVE_STMT
    MOVE_KW "move"
    WHITESPACE " "
    LAST_KW "LAST"
    WHITESPACE " "
    FROM_KW "FROM"
    WHITESPACE " "
    NAME
      IDENT "cursor_name"
  SEMICOLON ";"
  WHITESPACE "\n"
  MOVE_STMT
    MOVE_KW "move"
    WHITESPACE " "
    ABSOLUTE_KW "ABSOLUTE"
    WHITESPACE " "
    LITERAL
      INT_NUMBER "10"
    WHITESPACE " "
    FROM_KW "FROM"
    WHITESPACE " "
    NAME
      IDENT "cursor_name"
  SEMICOLON ";"
  WHITESPACE "\n"
  MOVE_STMT
    MOVE_KW "move"
    WHITESPACE " "
    RELATIVE_KW "RELATIVE"
    WHITESPACE " "
    LITERAL
      INT_NUMBER "10"
    WHITESPACE " "
    FROM_KW "FROM"
    WHITESPACE " "
    NAME
      IDENT "cursor_name"
  SEMICOLON ";"
  WHITESPACE "\n"
  MOVE_STMT
    MOVE_KW "move"
    WHITESPACE " "
    LITERAL
      INT_NUMBER "10"
    WHITESPACE " "
    FROM_KW "FROM"
    WHITESPACE " "
    NAME
      IDENT "cursor_name"
  SEMICOLON ";"
  WHITESPACE "\n"
  MOVE_STMT
    MOVE_KW "move"
    WHITESPACE " "
    ALL_KW "ALL"
    WHITESPACE " "
    FROM_KW "FROM"
    WHITESPACE " "
    NAME
      IDENT "cursor_name"
  SEMICOLON ";"
  WHITESPACE "\n"
  MOVE_STMT
    MOVE_KW "move"
    WHITESPACE " "
    FORWARD_KW "FORWARD"
    WHITESPACE " "
    FROM_KW "FROM"
    WHITESPACE " "
    NAME
      IDENT "cursor_name"
  SEMICOLON ";"
  WHITESPACE "\n"
  MOVE_STMT
    MOVE_KW "move"
    WHITESPACE " "
    FORWARD_KW "FORWARD"
    WHITESPACE " "
    LITERAL
      INT_NUMBER "10"
    WHITESPACE " "
    FROM_KW "FROM"
    WHITESPACE " "
    NAME
      IDENT "cursor_name"
  SEMICOLON ";"
  WHITESPACE "\n"
  MOVE_STMT
    MOVE_KW "move"
    WHITESPACE " "
    FORWARD_KW "FORWARD"
    WHITESPACE " "
    ALL_KW "ALL"
    WHITESPACE " "
    FROM_KW "FROM"
    WHITESPACE " "
    NAME
      IDENT "cursor_name"
  SEMICOLON ";"
  WHITESPACE "\n"
  MOVE_STMT
    MOVE_KW "move"
    WHITESPACE " "
    BACKWARD_KW "BACKWARD"
    WHITESPACE " "
    FROM_KW "FROM"
    WHITESPACE " "
    NAME
      IDENT "cursor_name"
  SEMICOLON ";"
  WHITESPACE "\n"
  MOVE_STMT
    MOVE_KW "move"
    WHITESPACE " "
    BACKWARD_KW "BACKWARD"
    WHITESPACE " "
    LITERAL
      INT_NUMBER "10"
    WHITESPACE " "
    FROM_KW "FROM"
    WHITESPACE " "
    NAME
      IDENT "cursor_name"
  SEMICOLON ";"
  WHITESPACE "\n"
  MOVE_STMT
    MOVE_KW "move"
    WHITESPACE " "
    BACKWARD_KW "BACKWARD"
    WHITESPACE " "
    ALL_KW "ALL"
    WHITESPACE " "
    FROM_KW "FROM"
    WHITESPACE " "
    NAME
      IDENT "cursor_name"
  SEMICOLON ";"
  WHITESPACE "\n\n"
