crates/squawk_parser/src/snapshots/parser__test__reassign_ok.snap
---
source: crates/parser/src/test.rs
input_file: crates/parser/test_data/ok/reassign.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  REASSIGN_STMT
    REASSIGN_KW "reassign"
    WHITESPACE " "
    OWNED_KW "owned"
    WHITESPACE " "
    BY_KW "by"
    WHITESPACE " "
    SET_KW "set"
    COMMA ","
    WHITESPACE " "
    CURRENT_ROLE_KW "current_role"
    COMMA ","
    WHITESPACE " "
    CURRENT_USER_KW "current_user"
    COMMA ","
    WHITESPACE " "
    IDENT "foo"
    WHITESPACE " "
    TO_KW "to"
    WHITESPACE " "
    SESSION_USER_KW "session_user"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  REASSIGN_STMT
    REASSIGN_KW "reassign"
    WHITESPACE " "
    OWNED_KW "owned"
    WHITESPACE " "
    BY_KW "by"
    WHITESPACE " "
    CURRENT_USER_KW "current_user"
    WHITESPACE " "
    TO_KW "to"
    WHITESPACE " "
    CURRENT_ROLE_KW "current_role"
  SEMICOLON ";"
  WHITESPACE "\n\n"
